// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders logged in without crashing 1`] = `
<nav
  className="navbar navbar-expand navbar-dark bg-dark"
>
  <a
    className="navbar-brand"
    href="/home"
  >
    🍺 Pycont
  </a>
  <div
    className="navbar-nav"
    onKeyDown={[Function]}
  >
    <a
      className="nav-link"
      data-rb-event-key="/home"
      href="/home"
      onClick={[Function]}
      onKeyDown={[Function]}
    >
      Home
    </a>
    <a
      className="nav-link"
      data-rb-event-key="/terms"
      href="/terms"
      onClick={[Function]}
      onKeyDown={[Function]}
    >
      Terms
    </a>
  </div>
  <div
    aria-expanded={null}
    className="justify-content-end navbar-collapse collapse"
  >
    <div
      className="navbar-nav"
      onKeyDown={[Function]}
    >
      <a
        className="nav-link"
        data-rb-event-key={null}
        href="#"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="button"
      >
        Log out
      </a>
    </div>
  </div>
</nav>
`;

exports[`renders without crashing 1`] = `
<nav
  className="navbar navbar-expand navbar-dark bg-dark"
>
  <a
    className="navbar-brand"
    href="/"
  >
    🍺 Pycont
  </a>
  <div
    className="navbar-nav"
    onKeyDown={[Function]}
  >
    <a
      className="active nav-link"
      data-rb-event-key="/"
      href="/"
      onClick={[Function]}
      onKeyDown={[Function]}
      style={Object {}}
    >
      Landing
    </a>
    <a
      className="nav-link"
      data-rb-event-key="/terms"
      href="/terms"
      onClick={[Function]}
      onKeyDown={[Function]}
    >
      Terms
    </a>
  </div>
  <div
    aria-expanded={null}
    className="justify-content-end navbar-collapse collapse"
  >
    <div
      className="navbar-nav"
      onKeyDown={[Function]}
    >
      <a
        className="nav-link"
        data-rb-event-key="/login"
        href="/login"
        onClick={[Function]}
        onKeyDown={[Function]}
      >
        Log in
      </a>
    </div>
  </div>
</nav>
`;
